--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.0
+URL: https://github.com/shinyworks/shinyenv
+BugReports: https://github.com/shinyworks/shinyenv/issues
