--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,11 +7,12 @@ Authors@R:
 Description: An experimental package to capture and reroute dangerous
     Shiny function calls.
 License: MIT + file LICENSE
+URL: https://github.com/shinyworks/shinyenv,
+    https://shinyworks.github.io/shinyenv/
+BugReports: https://github.com/shinyworks/shinyenv/issues
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.0
-URL: https://github.com/shinyworks/shinyenv
-BugReports: https://github.com/shinyworks/shinyenv/issues
