--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,7 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.0
+Imports: 
+    purrr,
+    rlang,
+    shiny
