--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,19 +4,19 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Jon", "Harmon", , "jonthegeek@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-4781-4346"))
-Description: An experimental package to capture and reroute dangerous
-    Shiny function calls.
+Description: An experimental package to deal with environment-like
+    variables in Shiny.
 License: MIT + file LICENSE
-URL: https://github.com/shinyworks/shinyenv,
-    https://shinyworks.github.io/shinyenv/
+URL: https://shinyenv.shinyworks.org/,
+    https://github.com/shinyworks/shinyenv
 BugReports: https://github.com/shinyworks/shinyenv/issues
+Imports: 
+    purrr,
+    rlang,
+    shiny
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.0
-Imports: 
-    purrr,
-    rlang,
-    shiny
